<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:visibility="visible"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:id="@+id/layout_NetworkConfig">

    <TextView
        android:id="@+id/txt_netConfigHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txt_description"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/layout_switchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false">

        <TextView
            android:id="@+id/label_classless"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/switch_label_classless"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_addrType"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0px"
            android:gravity="center"
            android:textOn="      "
            android:textOff="      "
            android:checked="true"/>

        <TextView
            android:id="@+id/label_classful"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/switch_label_classful"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_netAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_label_netAddr"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layout_ipContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false">

        <com.example.philcidr.AddressField
            android:id="@+id/txt_inputIP_1"
            android:tag="network_config_txt_inputIP_1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txt_dot"
            android:textSize="20sp" />

        <com.example.philcidr.AddressField
            android:id="@+id/txt_inputIP_2"
            android:tag="network_config_txt_inputIP_2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txt_dot"
            android:textSize="20sp" />

        <com.example.philcidr.AddressField
            android:id="@+id/txt_inputIP_3"
            android:tag="network_config_txt_inputIP_3"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/txt_dot"
            android:textSize="20sp" />

        <com.example.philcidr.AddressField
            android:id="@+id/txt_inputIP_4"
            android:tag="network_config_txt_inputIP_4"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_maskbitInputContainer"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:baselineAligned="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false">

        <LinearLayout
            android:id="@+id/layout_classInputContainer"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="visible"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <TextView
                android:id="@+id/label_classfulRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/radioGroup_label_classSelect"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/radioGroup_classSelect"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_classA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_label_classA" />

                <RadioButton
                    android:id="@+id/radio_classB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_label_classB" />

                <RadioButton
                    android:id="@+id/radio_classC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_label_classC" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_cidrInputContainer"
            android:layout_width="0px"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:clickable="false">

            <TextView
                android:id="@+id/label_cidrTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/txt_label_blockBits"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txt_cidrBlockBits"
                android:layout_width="70sp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                android:hint="@string/hint_blockBits" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_startCalc"
            android:id="@+id/btn_GO"
            android:clickable="false"
            android:layout_gravity="bottom" />
    </LinearLayout>

</LinearLayout>
